Fixed text overlapping border in MaterialDashbaord

--- a/frontend/src/components/material/material.css
+++ b/frontend/src/components/material/material.css
@@ -1,9 +1,4 @@
-.material-name {
-    position: relative;
-    border-style: ridge;
-    left: 100px;
-    top: 30px;
-}
+
 
 
 
